--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 @import 'normalize.css';
 
 * {
-    outline: none !important;
+    outline: none;
 }
 
 html {
@@ -18,7 +18,6 @@ body {
 html, body, #root {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     position: relative;
 }
 
@@ -52,11 +51,13 @@ h6, .h6 {
 }
 
 .slick-slider-m {
-    display: grid!important;
+    display: grid;
 }
-.slick-slide-p{
-    padding: 0 10px!important;
+
+.slick-slide-p {
+    padding: 0 10px;
 }
+
 a[role=button] {
     text-decoration: none;
 }
@@ -70,8 +71,6 @@ a[role=button] {
     }
 
     ::-webkit-scrollbar:hover {
-        width: 12px;
-        height: 12px;
         background-color: rgba(0, 0, 0, 0.06);
     }
 
@@ -83,27 +82,24 @@ a[role=button] {
 
     ::-webkit-scrollbar-thumb:active {
         box-shadow: inset 0 0 0 20px rgba(0, 0, 0, 0.37);
-        border-radius: 20px;
     }
 }
 
 form label {
     z-index: 99;
 }
+
 .slick-initialized .slick-slide {
-    padding: 5px!important;
+    padding: 5px;
 }
 
 .slick-prev:before, .slick-next:before {
-    color: black!important;
+    color: black;
 }
 
+/* Importation des autres fichiers CSS */
 @import 'print.css';
-
 @import 'tables.css';
-
 @import 'react-table.css';
-
 @import 'prism.css';
-
 @import 'tailwind.css';
