--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,6 +19,7 @@ html, body, #root {
     width: 100%;
     height: 100%;
     position: relative;
+    overflow: auto; /* Permet le défilement */
 }
 
 h1, .h1 {
