--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,23 +66,26 @@ a[role=button] {
 /* Medium Devices, Desktops Only */
 @media only screen and (min-width: 992px) {
     ::-webkit-scrollbar {
+        -webkit-appearance: none;
+    }
+    
+    ::-webkit-scrollbar:vertical {
         width: 12px;
+    }
+    
+    ::-webkit-scrollbar:horizontal {
         height: 12px;
-        background-color: rgba(0, 0, 0, 0);
     }
-
-    ::-webkit-scrollbar:hover {
-        background-color: rgba(0, 0, 0, 0.06);
-    }
-
+    
     ::-webkit-scrollbar-thumb {
-        border: 2px solid transparent;
-        box-shadow: inset 0 0 0 20px rgba(0, 0, 0, 0.24);
-        border-radius: 20px;
+        background-color: rgba(0, 0, 0, .5);
+        border-radius: 10px;
+        border: 2px solid #ffffff;
     }
-
-    ::-webkit-scrollbar-thumb:active {
-        box-shadow: inset 0 0 0 20px rgba(0, 0, 0, 0.37);
+    
+    ::-webkit-scrollbar-track {
+        border-radius: 10px;
+        background-color: #ffffff;
     }
 }
 
