--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 @import 'normalize.css';
 
 * {
-    outline: none;
+    outline: none !important;
 }
 
 html {
@@ -18,8 +18,8 @@ body {
 html, body, #root {
     width: 100%;
     height: 100%;
+    overflow: hidden;
     position: relative;
-    overflow: auto; /* Permet le défilement */
 }
 
 h1, .h1 {
@@ -52,13 +52,11 @@ h6, .h6 {
 }
 
 .slick-slider-m {
-    display: grid;
+    display: grid!important;
 }
-
-.slick-slide-p {
-    padding: 0 10px;
+.slick-slide-p{
+    padding: 0 10px!important;
 }
-
 a[role=button] {
     text-decoration: none;
 }
@@ -66,44 +64,46 @@ a[role=button] {
 /* Medium Devices, Desktops Only */
 @media only screen and (min-width: 992px) {
     ::-webkit-scrollbar {
-        -webkit-appearance: none;
-    }
-    
-    ::-webkit-scrollbar:vertical {
         width: 12px;
-    }
-    
-    ::-webkit-scrollbar:horizontal {
         height: 12px;
+        background-color: rgba(0, 0, 0, 0);
     }
-    
+
+    ::-webkit-scrollbar:hover {
+        width: 12px;
+        height: 12px;
+        background-color: rgba(0, 0, 0, 0.06);
+    }
+
     ::-webkit-scrollbar-thumb {
-        background-color: rgba(0, 0, 0, .5);
-        border-radius: 10px;
-        border: 2px solid #ffffff;
+        border: 2px solid transparent;
+        box-shadow: inset 0 0 0 20px rgba(0, 0, 0, 0.24);
+        border-radius: 20px;
     }
-    
-    ::-webkit-scrollbar-track {
-        border-radius: 10px;
-        background-color: #ffffff;
+
+    ::-webkit-scrollbar-thumb:active {
+        box-shadow: inset 0 0 0 20px rgba(0, 0, 0, 0.37);
+        border-radius: 20px;
     }
 }
 
 form label {
     z-index: 99;
 }
-
 .slick-initialized .slick-slide {
-    padding: 5px;
+    padding: 5px!important;
 }
 
 .slick-prev:before, .slick-next:before {
-    color: black;
+    color: black!important;
 }
 
-/* Importation des autres fichiers CSS */
 @import 'print.css';
+
 @import 'tables.css';
+
 @import 'react-table.css';
+
 @import 'prism.css';
+
 @import 'tailwind.css';
